# ThemeStyler

ThemeStyle/: CMakeLists.txt  apply_system_theme.cpp  apply_system_theme.hpp  base64.cpp  base64.h  file_manager.hpp  main.cpp
ThemeStyle/glad/: glad.c  glad.h
